--- a/src/stylesheets/radar.scss
+++ b/src/stylesheets/radar.scss
@@ -24,7 +24,10 @@
 
 .radar-wrapper {
   align-items: center;
-  display: flex;
   justify-content: center;
   width: 100%;
+
+  .radar-container {
+    display: inline-block;
+  }
 }
